fix: removing bugs and hardcodes