@@ -1,13 +1,5 @@
-/*
- * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
- * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
- */
 package com.meupet.service;
 
-/**
- *
- * @author D410W
- */
 import com.meupet.dto.UsuarioRequestDTO;
 import com.meupet.dto.UsuarioResponseDTO;
 import com.meupet.model.DadoInvalidoException;
@@ -15,7 +7,7 @@ import com.meupet.model.Usuario;
 import com.meupet.repository.UsuarioRepository;
 import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 
 @Service
@@ -48,7 +40,15 @@ public class UsuarioService {
     public List<UsuarioResponseDTO> listarTodas() {
         return repository.findAll().stream()
                 .map(this::converterParaDTO)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public Optional<Usuario> autenticar(String email, String senha) {
+        Optional<Usuario> usuario = repository.findByEmail(email);
+        if (usuario.isPresent() && passwordEncoder.matches(senha, usuario.get().getSenha())) {
+            return usuario;
+        }
+        return Optional.empty();
     }
 
     private UsuarioResponseDTO converterParaDTO(Usuario usuario) {
@@ -56,7 +56,6 @@ public class UsuarioService {
         response.setId(usuario.getId());
         response.setNome(usuario.getNome());
         response.setEmail(usuario.getEmail());
-        response.setSenha(usuario.getEmail());;
 
         return response;
     }
